Consolidate shared plumbing into AbstractOAuthService
Token exchange, the authorization redirect, the version and the name
were repeated in both StandardResourceOAuthService and
StandardIdTokenOAuthService. Pull them into a common
AbstractOAuthService that both now extend, so the four methods and the
client/log/name state exist once.

Migrate the two remaining hybrid providers, google and azure, onto the
same base with their own getUserInfo. Both fetch a resource and also
validate a claim from the id_token: google matches the hosted
domain (hd), azure matches the tenant (tid) and audience (aud), and both
return null to deny login on mismatch. They now fetch through
OAuthClient instead of a raw OAuth20Service.

Google keeps its authorization-redirect customization by overriding
getAuthorizationInfo to append the hd parameter.

Azure needs its "Accept: */*" request header, so OAuthClient gains a
get overload taking extra headers; the plain get delegates to it with
none. With this, google and azure no longer import ScribeJava request,
response or token types.

Change-Id: I2e263ee5f7ffca533a2ed92b396c77b83f44bade